create Mod annotation